--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">O365 Android MS Graph Snippets</string>
+    <string name="app_name">Birthday Greetings</string>
 
     <string name="action_settings">Settings</string>
     <string name="org_acct">Organizational Account</string>
@@ -27,9 +27,9 @@
     <string name="txt_snippet_name_text">Get all pages</string>
     <string name="list_segment_snippet_name">PAGES</string>
     <string name="signin_button">Connect to Office 365</string>
-    <string name="signin_description">Welcome to the Office 365 Android Microsoft Graph Snippets sample! Let\'s sign in and get started...</string>
+    <string name="signin_description">LogIn to start sending Birthday Greetings Video to your friends!</string>
     <string name="beta">BETA</string>
-    <string name="title_activity_list_birthday">ListBirthdayActivity</string>
+    <string name="title_activity_list_birthday">Birthdays</string>
 
     <string name="hello_world">Hello world!</string>
 </resources>
